feat: integrate dockerize for service dependency management in Node.js container

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
     build:
       context: ./node
     container_name: app
+    command: dockerize -wait tcp://db:3306 -timeout 20s node src/index.js
     tty: true
     volumes:
       - ./node:/usr/src/app
